--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Zlecenie szafki stolarz</title>
+  <title>Zlecenie szafki - stolarz</title>
 </head>
 <body>
 
