--- a/index.html
+++ b/index.html
@@ -1,188 +1,56 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Zlecenie szafki - stolarz</title>
-  <style>
-    /* Ustawienia ogólne i czcionka */
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f4f7f6; /* Jasne, nowoczesne tło */
-      color: #333;
-      display: flex;
-      justify-content: center;
-      padding: 40px;
-      margin: 0;
-    }
+#leadForm input,
+#leadForm select,
+#leadForm textarea {
+  margin-bottom: 16px;
+}
 
-    /* Styl kontenera formularza */
-    #leadForm {
-      background-color: #ffffff;
-      padding: 30px 40px;
-      border-radius: 12px; /* Zaokrąglone rogi */
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); /* Subtelny cień */
-      max-width: 500px;
-      width: 100%;
-    }
+#leadForm h3 {
+  background: #f8f9fa;
+  padding: 10px 14px;
+  border-radius: 6px;
+}
 
-    /* Nagłówki */
-    h2 {
-      color: #007bff; /* Akcentujący kolor */
-      text-align: center;
-      margin-bottom: 30px;
-    }
+#leadForm {
+  animation: fadeInUp 0.5s ease-out;
+}
 
-    h3 {
-      color: #555;
-      border-bottom: 2px solid #e9ecef; /* Linia oddzielająca sekcje */
-      padding-bottom: 10px;
-      margin-top: 25px;
-      margin-bottom: 15px;
-    }
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(15px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
-    /* Pola tekstowe i wybory */
-    input[type="text"],
-    input[type="email"],
-    input[type="number"],
-    input[name="phone"],
-    select,
-    textarea {
-      width: 100%;
-      padding: 12px;
-      margin-bottom: 10px;
-      border: 1px solid #ced4da;
-      border-radius: 6px;
-      box-sizing: border-box; /* Ważne, by padding nie zmieniał szerokości */
-      font-size: 16px;
-      transition: border-color 0.3s, box-shadow 0.3s;
-    }
-    
-    /* Stylowanie placeholder'ów */
-    ::placeholder {
-      color: #adb5bd;
-    }
+input:required,
+select:required {
+  border-left: 4px solid #007bff;
+}
 
-    /* Efekt focus */
-    input:focus,
-    select:focus,
-    textarea:focus {
-      border-color: #007bff;
-      box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-      outline: none;
-    }
+input[type="number"] {
+  text-align: center;
+}
 
-    /* Pole wiadomości */
-    textarea {
-      resize: vertical;
-      min-height: 100px;
-    }
+input:hover,
+select:hover,
+textarea:hover {
+  border-color: #80bdff;
+}
 
-    /* Etykiety */
-    label {
-      display: block;
-      margin-bottom: 5px;
-      font-weight: 600;
-      color: #495057;
-    }
+button[type="submit"]:active {
+  transform: scale(0.98);
+}
 
-    /* Układ pól wymiarów */
-    #leadForm > label + br + input[type="number"] {
-      width: calc(33.33% - 8px); /* Dzieli szerokość na 3 z marginesami */
-      display: inline-block;
-      margin-right: 5px;
-    }
+@media (max-width: 600px) {
+  #leadForm {
+    padding: 25px 20px;
+  }
 
-    /* Przycisk */
-    button[type="submit"] {
-      background-color: #28a745; /* Zielony, zachęcający kolor */
-      color: white;
-      border: none;
-      padding: 15px 25px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 18px;
-      font-weight: bold;
-      width: 100%;
-      margin-top: 20px;
-      transition: background-color 0.3s ease;
-    }
-
-    /* Efekt hover przycisku */
-    button[type="submit"]:hover {
-      background-color: #218838; /* Ciemniejsza zieleń po najechaniu */
-    }
-  </style>
-</head>
-<body>
-
-<h2>Zlecenie wykonania szafki</h2>
-
-<form id="leadForm">
-  <h3>Dane kontaktowe</h3>
-  <input name="full_name" placeholder="Imię i nazwisko" required><br><br>
-  <input name="email" type="email" placeholder="Email" required><br><br>
-  <input name="phone" placeholder="Telefon"><br><br>
-
-  <h3>Szczegóły szafki</h3>
-  <label for="cabinet_type">Rodzaj szafki:</label>
-  <select name="cabinet_type" id="cabinet_type" required>
-    <option value="">--Wybierz--</option>
-    <option value="wiszaca">Wiszaca</option>
-    <option value="stojaca">Stojaca</option>
-  </select><br><br>
-
-  <label>Wymiary (cm):</label><br>
-  <input name="height" type="number" placeholder="Wysokość" required>
-  <input name="width" type="number" placeholder="Szerokość" required>
-  <input name="depth" type="number" placeholder="Głębokość" required><br><br>
-
-  <label for="material">Materiał / kolor:</label>
-  <input name="material" id="material" placeholder="np. drewno / MDF / kolor biały"><br><br>
-
-  <label for="message">Dodatkowa wiadomość:</label>
-  <textarea name="message" id="message" placeholder="Tutaj wpisz dodatkowe informacje"></textarea><br><br>
-
-  <button type="submit">Wyślij zlecenie</button>
-</form>
-
-<script>
-document.getElementById('leadForm').addEventListener('submit', async (e) => {
-  e.preventDefault();
-
-  const form = e.target;
-
-  const data = {
-    full_name: form.full_name.value,
-    email: form.email.value,
-    phone: form.phone.value,
-    cabinet_type: form.cabinet_type.value,
-    height: form.height.value,
-    width: form.width.value,
-    depth: form.depth.value,
-    material: form.material.value,
-    message: form.message.value,
-    token: 'SEKRETNY_TOKEN'
-  };
-
-  try {
-    const response = await fetch('https://tdwuznik.app.n8n.cloud/webhook/lead-form', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(data)
-    });
-
-    if (response.ok) {
-      alert('Zlecenie wysłane!');
-      form.reset();
-    } else {
-      alert('Błąd wysyłki formularza: ' + response.status);
-    }
-  } catch (err) {
-    alert('Błąd połączenia: ' + err);
-  }
-});
-</script>
-
-</body>
-
-</html>
+  #leadForm > label + br + input[type="number"] {
+    width: 100%;
+    margin-right: 0;
+  }
+}
