--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ document.getElementById('leadForm').addEventListener('submit', async (e) => {
   };
 
   try {
-    const response = await fetch('https://tdwuznik.app.n8n.cloud/webhook/lead-form', {
+    const response = await fetch('https://tdwuznik.app.n8n.cloud/webhook-test/lead-form', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify(data)
@@ -161,3 +161,4 @@ document.getElementById('leadForm').addEventListener('submit', async (e) => {
 
 </body>
 </html>
+
